--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,7 +18,7 @@
       </p>
     </mat-card-content>
   </mat-card>
-  <div fxFlex [hidden]="dishes">
+  <div fxFlex [hidden]="dish">
     <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
    </div>
 
