--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -35,29 +35,51 @@
   </div>
 
   <div fxFlex="40" *ngIf="dish">
-    <mat-card>
-      <mat-card-header>
-        <mat-card-title>
-          <h3>Comments</h3>
-        </mat-card-title>
-      </mat-card-header>
-      <mat-card-content>
+    <h3>Comments</h3>
+      <mat-list>
         <mat-list-item *ngFor="let comment of dish.comments">
-          {{comment.comment}}
-          <br>
-          {{comment.rating}} Stars
-          <br>
-          -- {{comment.author}}
-          {{comment.date | date:'mediumDate'}}
-          <br>
-          <br>
+          <p matLine>{{comment.comment}}</p>
+          <p matLine>{{comment.rating}} Stars </p>
+          <p matLine> -- {{comment.author}}
+          {{comment.date | date:'mediumDate'}}</p>
         </mat-list-item>
-      </mat-card-content>
-    </mat-card>
+        <!-- Preview comment -->
+        <mat-list-item *ngIf="!formErrors.author && !formErrors.comment">
+          <p matLine>{{ commentForm.value.comment }}</p>
+          <p matLine>{{ commentForm.value.rating }} Stars </p>
+          <p matLine> -- {{ commentForm.value.author }}</p>
+        </mat-list-item>
+      </mat-list>
+
+      <form novalidate [formGroup]="commentForm" #cform="ngForm" (ngSubmit)="onSubmit()">
+        <p>
+          <mat-form-field class="full-width">
+            <input matInput formControlName="author" placeholder="Name" type="text">
+            <mat-error *ngIf="formErrors.author">{{formErrors.author}}</mat-error>
+          </mat-form-field>
+        </p>
+        <p>
+          <mat-slider thumbLabel
+          [displayWith]="formatLabel"
+          formControlName="rating"
+          tickInterval="1"
+          min="1"
+          max="5"
+          value="5"></mat-slider>
+        </p>
+        <p>
+          <mat-form-field class="full-width">
+            <textarea matInput formControlName="comment" placeholder="Your Feedback" rows=12></textarea>
+            <mat-error *ngIf="formErrors.comment">{{formErrors.comment}}</mat-error>
+          </mat-form-field>
+        </p>
+        <button type="submit" mat-button class="background-primary text-floral-white"
+      [disabled]="commentForm.invalid">Submit</button>
+      </form>
   </div>
+
   <div fxFlex [hidden]="dish">
     <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
    </div>
-
 </div>
 
