--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -81,5 +81,9 @@
   <div fxFlex [hidden]="dish || errMess">
     <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
    </div>
+   <div fxFlex *ngIf="errMess">
+    <h2>Error</h2>
+    <h4>{{errMEss}}</h4>
+  </div>
 </div>
 
