--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -20,7 +20,7 @@
         </p>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button [routerLink]="['/dishdetail', prev]">
+        <button mat-button [routerLink]="['/dishdetail', prev]" [@expand]>
           <span class="fa fa-chevron-left fa-lg"></span>
         </button>
         <button mat-button (click)="goBack()">BACK</button>
@@ -34,7 +34,7 @@
     </mat-card>
   </div>
 
-  <div fxFlex="40" *ngIf="dish" [@visibility]="visibility">
+  <div fxFlex="40" *ngIf="dish" [@visibility]="visibility" [@expand]>
     <h3>Comments</h3>
       <mat-list>
         <mat-list-item *ngFor="let comment of dish.comments">
