--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -71,8 +71,12 @@
         </p>
       </mat-list-item>
     </mat-list>
-    <div fxFlex [hidden]="leaders">
+    <div fxFlex [hidden]="leaders || errMess">
       <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
      </div>
+     <div fxFlex *ngIf="errMess">
+      <h2>Error</h2>
+      <h4>{{errMess}}</h4>
+    </div>
   </div>
 
